added picture and layout

--- a/design/index.html
+++ b/design/index.html
@@ -4,9 +4,23 @@
         <meta charset="utf-8">
         <title>Profile Card</title>
         <link href="../styles/style.css" type="text/css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- this is just a test to make sure html and css are linked -->
-        <h1>Testing</h1>
+        <div id="containter">
+            <div class="top">
+                <img src="../images/image-victor.jpg" alt="profile picture">
+            </div>
+            <div class="middle">
+                <p>Victor Crest 26<span>London</span></p>
+            </div>
+            <div class="bottom">
+                <p>80K<span>Followers</span></p>
+                <p>803K<span>Likes</span></p>
+                <p>1.4K<span>Photos</span></p>
+            </div>
+        </div>
     </body>
 </html>
