updated the layout size and font

--- a/design/index.html
+++ b/design/index.html
@@ -9,17 +9,17 @@
     </head>
     <body>
         <!-- this is just a test to make sure html and css are linked -->
-        <div id="containter">
+        <div id="container">
             <div class="top">
                 <img src="../images/image-victor.jpg" alt="profile picture">
             </div>
             <div class="middle">
-                <p>Victor Crest 26<span>London</span></p>
+                <p class="name">Victor Crest <span class="age">26</span><br /><span class="location">London</span></p>
             </div>
             <div class="bottom">
-                <p>80K<span>Followers</span></p>
-                <p>803K<span>Likes</span></p>
-                <p>1.4K<span>Photos</span></p>
+                <p class="stats">80K<br /><span class="stats_info">Followers</span></p>
+                <p class="stats">803K<br /><span class="stats_info">Likes</span></p>
+                <p class="stats">1.4K<br /><span class="stats_info">Photos</span></p>
             </div>
         </div>
     </body>
