--- a/design/index.html
+++ b/design/index.html
@@ -9,17 +9,21 @@
     </head>
     <body>
         <!-- this is just a test to make sure html and css are linked -->
-        <div id="container">
-            <div class="top">
-                <img src="../images/image-victor.jpg" alt="profile picture">
-            </div>
-            <div class="middle">
-                <p class="name">Victor Crest <span class="age">26</span><br /><span class="location">London</span></p>
-            </div>
-            <div class="bottom">
-                <p class="stats">80K<br /><span class="stats_info">Followers</span></p>
-                <p class="stats">803K<br /><span class="stats_info">Likes</span></p>
-                <p class="stats">1.4K<br /><span class="stats_info">Photos</span></p>
+        <div id="wrapper">
+            <img src="../images/bg-pattern-top.svg" alt="#" class="bg_top" />
+            <img src="../images/bg-pattern-bottom.svg" alt="#" class="bg_bottom" />
+            <div id="container">
+                <div class="top">
+                    <img src="../images/image-victor.jpg" class= "profile_pic" alt="profile picture">
+                </div>
+                <div class="middle">
+                    <p class="name">Victor Crest <span class="age">26</span><br /><span class="location">London</span></p>
+                </div>
+                <div class="bottom">
+                    <p class="stats">80K<br /><span class="stats_info">Followers</span></p>
+                    <p class="stats">803K<br /><span class="stats_info">Likes</span></p>
+                    <p class="stats">1.4K<br /><span class="stats_info">Photos</span></p>
+                </div>
             </div>
         </div>
     </body>
